[package]
name = "momoka"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
async-recursion = "1.0.4"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures = "0.3.27"
juniper = "0.15.11"
log = "0.4.17"
mysql = "23.0.1"
r2d2 = "0.8.10"
r2d2_mysql = {git = "https://github.com/quang19992/r2d2-mysql.git", branch = "custom-healthcheck"}
r2d2_redis = "0.14.0"
scylla = "0.7.0"
serde = "1.0.157"
serde_cbor = "0.11.2"
tokio = {version = "1.27.0", features = ["rt-multi-thread"]}
